Additional files for better pulling

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,21 @@
+# General
+node_modules/
 .env
 *.env
-# Byte-compiled / cache files
-__pycache__/
-*.py[cod]
-# Node modules
-node_modules/
-# macOS system files
 .DS_Store
-# Python virtual environments
-venv/
-# Build output
-build/
-dist/
-# Xcode/Android Studio
-*.xcworkspace
-*.xcodeproj
-*.idea/
-*.gradle/
-*.iml
-# Pods (iOS)
-ios/Pods/
-# Log files
-*.log
-# Additional for front
-frontend/node_modules/
-frontend/build/
-frontend/.vscode/
+
+# Ruby/Bundler
+frontend/.bundle/
+frontend/vendor/
+frontend/Gemfile.lock # optional
+
+# Android
+android/.gradle/
+android/build/
+
+# iOS
+frontend/ios/Pods/
+frontend/ios/build/
+frontend/ios/.xcode.env.local
+frontend/ios/frontend.xcworkspace/
+
