New branch: Development
Additions:
- Folder structure for project (View under src in frontend)
- Static bottom navigation bar created
- 3 screens -> Home/Chatbot/Buddy

Changes:
- App.tsx now routes to AppNavigator.tsx to handle starting navigation

Updates:
- gitignore additions for my project to handle typescript type error and additional readme
- Added 5 dependencies required for navigator to work (frontend/package.json)

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ frontend/android/.gradle/**/*.probe
 
 # Optional: ignore Android build reports
 frontend/android/build/reports/
+
+# Frontend
+README-FRONTEND.md
+types
