--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HelloWorld",
+  "name": "frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
     "axios": "^1.11.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.0.0",
     "react-native": "0.78.3",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
