--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,30 @@
 version: "3.9"
 
 services:
+  ngrok:
+    image: ngrok/ngrok:latest
+    restart: unless-stopped
+    command:
+      - "http"
+      - "--url=${NGROK_URL}"
+      - "backend:5000"
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+    depends_on:
+      - backend
+
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: nginx-proxy
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+  #     - ./certs:/etc/nginx/certs
+  #   depends_on:
+  #     - backend
+
   db:
     image: postgres:14
     container_name: pg-docker
@@ -17,8 +41,8 @@ services:
   backend:
     build: ./backend
     container_name: flask-backend
-    ports:
-      - "5001:5000"
+    expose:
+      - "5000"
     volumes:
       - ./backend:/app
     depends_on:
