Added requirements and updated dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,18 @@
-FROM python:3.11-slim
+FROM python:3.9-slim-bullseye
 
 WORKDIR /app
 
 COPY requirements.txt .
+
+# Install system dependencies first
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    ca-certificates \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Then install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./app ./app
