--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,8 @@ services:
       - db
     environment:
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
+    secrets:
+      - gemini_api_key
     develop:
       watch:
         - action: rebuild
@@ -57,3 +58,7 @@ services:
 
 volumes:
   pgdata:
+
+secrets:
+  gemini_api_key:
+    file: ./secrets/gemini_key.txt
